# illustrator

./: README.md  illustrator.py  pyproject.toml  styles.txt
illustrator/: __main__.py
